--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,14 +47,18 @@ our family of staff and patients.</div>
 	</div>
 <div class="navbar">
   <div class="navbar-inner">
-      <div class="container-fluid">
-        <a data-target=".nav-collapse" data-toggle="collapse" class="btn btn-navbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </a>
-        <div class="nav-collapse" style="height: auto !important;">
-          <ul class="nav">
+    <div class="container-fluid">
+ 
+      <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
+      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+ 
+      <!-- Everything you want hidden at 940px or less, place within here -->
+      <div class="nav-collapse collapse">
+		  <ul class="nav">
             <li><%= link_to "Home", home_path %></li>
             <li><%= link_to "Staff", staff_path %></li>
             <li class="dropdown">
@@ -137,11 +141,12 @@ our family of staff and patients.</div>
 		    </li>
 		    <li><%= link_to "Testimonials", testimonials_path %></li>
             <li><%= link_to "New Patients", newpatients_path %></li>
-            <li><%= link_to "Contact Us", contact_path %></li>
-		</div>
-	</div>
-</div>
-</div>
+            <li><%= link_to "Contact Us", contact_path %></li>        
+      </div>
+ 
+    </div>
+  </div>
+</div>	
 <div class="row-fluid" style="text-align:center;">
 	<div class="offset1 span2">
 		<%= link_to image_tag( 'dreamsmiles-btn.png'), 'dreamsmiles' %>
