--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -148,12 +148,10 @@ our family of staff and patients.</div>
   </div>
 </div>	
 <div class="row-fluid" style="text-align:center;">
-	<div class="offset1 span2">
-		<%= link_to image_tag( 'dreamsmiles-btn.png'), 'dreamsmiles' %>
-	</div>
-	<div class="span2 offset6">
+	<div class="span11 offset1">
+		<%= link_to image_tag( 'dreamsmiles-btn.png'), 'dreamsmiles', :class => "dreamsmiles-btn" %>
 		<div class="socialmedia">
-			<h6 style="position:relative; top: 8px;">Join Us</h6>
+			<h6>Join Us</h6>
 			<%= link_to image_tag('facebook.jpg'), 'https://www.facebook.com/pages/TLC-Dental-Group/703498763013164', :target => "_blank" %>
 			<%= image_tag('twitter.jpg') %>
 			<a href="#"><h6 style="display:inline-block; position:relative; top:7px;">More</h6></a>		
