--- a/app/views/static_pages/bonding.html.erb
+++ b/app/views/static_pages/bonding.html.erb
@@ -49,7 +49,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For definitions relating to bonding consult Dr. Rothenberg's Dental Dictionary.  To learn if you might benefit from bonding, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
+				For definitions relating to bonding consult Dr. Rothenberg's Dental Dictionary.  To learn how you might benefit from Dental Bonding, please call the TLC Dental Group, Fayetteville / Manlius office now at (315)-637-7684 or click <%= link_to "here", contact_path(@contact, :anchor => "email") %> to email us. 
 			</p>			
 		</div>
 	</div>
