--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -141,7 +141,8 @@ our family of staff and patients.</div>
 		    </li>
 		    <li><%= link_to "Testimonials", testimonials_path %></li>
             <li><%= link_to "New Patients", newpatients_path %></li>
-            <li><%= link_to "Contact Us", contact_path %></li>        
+            <li><%= link_to "Contact Us", contact_path %></li>
+            <li><%= link_to "Blog", blog_path %></li>        
       </div>
  
     </div>
