--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -70,7 +70,7 @@
 	</div>
 </div>
 
-<div class="row-fluid" class="email">
+<div class="row-fluid" id="email">
 	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Email Appointment</h3>
