--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,10 @@
 </div>
 <div id="left-welcome">
 	<div class="row-fluid">
-		<div class="span12">
+		<div class="span2 offset1">
+			<%= image_tag "homepage-lion.jpg", :class => "homepage-lion" %>
+		</div>
+		<div class="span6">
 			<i><p>
 				<b>TLC is Art</b> expressed by our Toothbrush Mailbox<br>
 				<b>TLC is Comfort</b> in the relaxed ambiance of our office<br>
@@ -17,6 +20,9 @@
 				<b>TLC is Robust Health</b>  from a full range of services<br>
 				<b>TLC is Modern Technology </b>for optimum treatment<br>
 			</p></i>
+		</div>
+		<div class="span3">
+			<%= image_tag "trophy.jpg", :class => "trophy" %>
 		</div>
 	</div>
 </div>
