--- a/app/views/static_pages/newpatients.html.erb
+++ b/app/views/static_pages/newpatients.html.erb
@@ -21,7 +21,7 @@
 </div>
 <div class="row-fluid">
 	<div class="span10 offset1">
-		<div class="contact-container">
+		<div class="contact-container" id="cowardlion">
 			<h3>We Cater to Cowards</h3>
 			<%= image_tag 'cowardlylion.jpg', :class => "center" %><br>
 			<p>
