--- a/app/views/static_pages/blog.html.erb
+++ b/app/views/static_pages/blog.html.erb
@@ -1,16 +1,8 @@
-<style type="text/css">
-.above-nav {
-	display: none;
-}
-
-</style>
-
 <div class="pagetitle">
 	<div class="row-fluid">
-		<div class="span10 offset1" style="border-bottom:2px solid #062161; padding-bottom:60px;">
-			<h1>Our Editor in Chief <br>Marsha Rothenberg</h1>
+		<div class="span12">
+			<u>TLC Dental Group Blog</u>
 		</div>
-		<hr>
 	</div>
 </div>
 <div class="row-fluid">
@@ -18,19 +10,17 @@
 		<div class="blog-container">
 			<i><h1>Introduction</h1></i>
 			<p>
-				The TLC Dental Group Blog is devoted to sharing common experiences with our family of patients: the joy of greeting old friends as they enter the office, the pleasure of welcoming new patients, the laughter of children in the Lego area,  Our Blog tells of transforming dental concerns into dental content and dental fears into dental confidence. It is also a sharing of good times outside the office such as greeting patient families at ZooBoo, at school events, and at local festivities.
+				The TLC Dental Group Blog is devoted to sharing common experiences with our family of patients: the joy of greeting old friends as they enter the office, the pleasure of welcoming new friends, the laughter of children in the Lego area.  It is also a sharing of good times outside the office: greeting old and new patients at civic and charitable events such as ZooBoo, at school events, and at local festivities.  
 			</p>
 			<p>
-				Our Blog tells of transforming dental concerns into dental content and dental fears into dental confidence.
-			</p>
-			<p>
-				It also recounts new developments in dental technology, advances in dental treatments, discoveries in dental research, and new connections between dental and general health.  
-			</p>
-			<p>
-				We give you regular updates on our treatments listed under Dream Smiles: Dental Bonding, Dental Bridges, Dental Cleaning,  Dental Contouring, Dental Crowns, Dentures, Dental Fillings, Dental Implants, Snap-On-Smile, Dental Veneers, Dental Whitening; those listed under Common Dental Problems: Abscessed Tooth or Gum, Bad Breath, Broken or Ill Fitting Dentures, Burning Mouth Syndrome, Canker Sores, Cold Sores, Cracked or Lost Filling, Dislodged, Lost or Significantly Chipped Crown, Dry Mouth, Fractured or Broken Tooth, Grimy, Sticky Teeth, Headache, Loose or Lost Tooth, Root Canal, Sleep Apnea, Snoring, Swollen, Tender, Bleeding gums, Teeth Grinding, TMD or TMJ, Toothache, Tooth Cavity, Tooth Extraction, Tooth Sensitivity, Wisdom Teeth; and those listed under Preventive Dentistry: Cleaning, Diet, Fluoride Treatment, Mouthguards, Oral Cancer Screening, Oral Hygiene, Rotadent, Sealant, Soft Tissue Management, and Tobacco Cessation.
+				Our Blog tells of transforming dental concerns into dental content and dental fears into dental confidence.  It also recounts new developments in dental technology, advances in dental treatments, discoveries in dental research, and new connections between dental and general health. 
 			</p>
 			<p>
 				In short, our Blog is akin to sitting around a kitchen table with friends and family while sharing a cup of coffee and tidings of the dental day.
+			</p>
+			<p>
+				Marsha Rothenberg<br>
+				Editor-in-Chief
 			</p><br>
 		</div>
 	</div>
@@ -42,7 +32,7 @@
 </div>
 <div class="row-fluid" style="text-align:center;">
 	<div class="span10 offset1">
-		<%= image_tag "congrats.jpg" %>
+		<img src="<%= asset_path 'congrats.jpg' %>" class="trophy" id="trophy" />
 	</div>
 </div>
 
