--- a/app/views/static_pages/blog.html.erb
+++ b/app/views/static_pages/blog.html.erb
@@ -8,7 +8,7 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="blog-container">
-			<i><h1>Introduction</h1></i>
+			<h3>Introduction</h3>
 			<p>
 				The TLC Dental Group Blog is devoted to sharing common experiences with our family of patients: the joy of greeting old friends as they enter the office, the pleasure of welcoming new friends, the laughter of children in the Lego area.  It is also a sharing of good times outside the office: greeting old and new patients at civic and charitable events such as ZooBoo, at school events, and at local festivities.  
 			</p>
