--- a/app/views/static_pages/snaponsmile.html.erb
+++ b/app/views/static_pages/snaponsmile.html.erb
@@ -10,8 +10,8 @@
 	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>TLC Snap-On Smile</h3> <h4>A perfect smile <br> & <br> A dream come true</h4><br> 
-			<b>Those Special Moments</b>
 			<p>
+				<b>Those Special Moments</b><br>
 				Are there moments when you dream of a perfect smile but don’t have the time or funds for a complete dental makeover?<br>
 			</p>
 			<p>
