--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -405,6 +405,11 @@ label {
       text-align: center;
       margin-bottom: 25px;
     }
+
+    h3 {
+      text-align: center;
+    }
+
     h4 {
       text-align: center;
     }
@@ -425,7 +430,7 @@ label {
 }
 
 .coffeecup {
-  margin-top: -25px;
+  margin-top: -35px;
 }
 
 #rothenburg {
