--- a/app/views/static_pages/bonding.html.erb
+++ b/app/views/static_pages/bonding.html.erb
@@ -49,7 +49,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For definitions relating to bonding consult Dr. Rothenberg's Dental Dictionary.  To learn how you might benefit from Dental Bonding, please call the TLC Dental Group, Fayetteville / Manlius office now at (315)-637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. 
+				For definitions relating to dental bonding consult Dr. Rothenberg's Dental Dictionary.  <span class="redlink">To learn how you might benefit from dental bonding, please call the TLC Dental Group, Fayetteville / Manlius office now at (315)-637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>
 			</p>			
 		</div>
 	</div>
