--- a/app/views/static_pages/bridges.html.erb
+++ b/app/views/static_pages/bridges.html.erb
@@ -52,7 +52,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For definitions related to dental bridges consult Dr. Rothenberg's Dental Dictionary.  To learn if you might benefit from bonding, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
+				For definitions related to dental bridges consult Dr. Rothenberg's Dental Dictionary.  To learn how you might benefit from a dental bridge, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
 			</p>			
 		</div>
 	</div>
