--- a/app/views/static_pages/veneers.html.erb
+++ b/app/views/static_pages/veneers.html.erb
@@ -52,7 +52,7 @@
 			</p>						
 			<p>
 				<b>More Information</b><br>
-				For definitions related to dental veneers consult Dr. Rothenberg's Dental Dictionary.  To learn if you might benefit from veneers, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
+				For definitions related to dental veneers consult Dr. Rothenberg's Dental Dictionary.  To learn how you might benefit from veneers, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
 			</p>			
 		</div>
 	</div>
