made changes to last sentence in common dental, preventive dental, and treatments

--- a/app/views/static_pages/athleticmouthguards.html.erb
+++ b/app/views/static_pages/athleticmouthguards.html.erb
@@ -57,7 +57,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For definitions related to dental mouthguards consult Dr. Rothenberg's Dental Dictionary.  And to enjoy the advanced oralfacial protection of a custom fitted TLC athletic mouthguard please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
+				For definitions related to dental mouthguards consult Dr. Rothenberg's Dental Dictionary.  <span class="redlink">And to enjoy the advanced oralfacial protection of a custom fitted TLC athletic mouthguard please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>
 			</p>
 		</div>
 	</div>
