--- a/app/views/static_pages/bleedinggums.html.erb
+++ b/app/views/static_pages/bleedinggums.html.erb
@@ -52,7 +52,7 @@
 				Throughout your corrective procedure you will enjoy the comfort of our signature “Gentle Dentistry". 
 			</p>
 			<p>
-				For definitions related to gingivitis and periodontitis consult Dr. Rothenberg's Dental Dictionary.  And for prompt treatment and alleviation of swollen, tender, bleeding gums, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
+				For definitions related to gingivitis and periodontitis consult Dr. Rothenberg's Dental Dictionary.  <span class="redlink">And for prompt treatment and alleviation of swollen, tender, bleeding gums, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>
 			</p>
 		</div>
 	</div>
