--- a/app/views/static_pages/crackedfilling.html.erb
+++ b/app/views/static_pages/crackedfilling.html.erb
@@ -18,7 +18,7 @@
 				During this restorative procedure you will enjoy the comfort of our signature “Gentle Dentistry.” <br>
 			</p>
 			<p>
-				For definitions related to dental fillings consult Dr. Rothenberg's Dental Dictionary.  And for prompt treatment of a cracked or lost filling, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
+				For definitions related to dental fillings consult Dr. Rothenberg's Dental Dictionary.  <span class="redlink">And for prompt treatment of a cracked or lost filling, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>
 			</p>								
 		</div>
 	</div>
