--- a/app/views/static_pages/dreamsmilediet.html.erb
+++ b/app/views/static_pages/dreamsmilediet.html.erb
@@ -54,7 +54,7 @@
 			</ul>
 			<p>
 				<b>More Information</b><br>
-				For definitions related to dental diets consult Dr. Rothenberg's Dental Dictionary. And for a dental review of your diet and a copy of the TLC Dream Smile Diet booklet, please call the TLC Dental Group, Fayetteville / Manlius office at (315)-637-7684.
+				For definitions related to dental diets consult Dr. Rothenberg's Dental Dictionary.  <span class="redlink">And for a dental review of your diet and a copy of the TLC Dream Smile Diet booklet, please call the TLC Dental Group, Fayetteville / Manlius office at (315)-637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>
 			</p> 
 		</div>
 	</div>
