--- a/app/views/static_pages/oralcancerscreening.html.erb
+++ b/app/views/static_pages/oralcancerscreening.html.erb
@@ -61,7 +61,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For definitions related to oral cancer consult Dr. Rothenberg's Dental Dictionary. And to schedule an oral cancer screening, please call the TLC Dental Group, Fayetteville / Manlius office at 315-637-7684.  		
+				For definitions related to oral cancer consult Dr. Rothenberg's Dental Dictionary. <span class="redlink">And to schedule an oral cancer screening, please call the TLC Dental Group, Fayetteville / Manlius office at 315-637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>	
 			</p>	
 		</div>
 	</div>
