--- a/app/views/static_pages/oralhygiene.html.erb
+++ b/app/views/static_pages/oralhygiene.html.erb
@@ -86,7 +86,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For definitions related to oral hygiene consult Dr. Rothenberg's Dental Dictionary. And for a consultation on oral hygiene and a copy of the TLC Oral Hygiene booklet, please call the TLC Dental Group, Fayetteville / Manlius office at (315)-637-7684
+				For definitions related to oral hygiene consult Dr. Rothenberg's Dental Dictionary.  <span class="redlink">And for a consultation on oral hygiene and a copy of the TLC Oral Hygiene booklet, please call the TLC Dental Group, Fayetteville / Manlius office at (315)-637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>
 			</p>
 		</div>
 	</div>
