--- a/app/views/static_pages/preventivedentalcleaning.html.erb
+++ b/app/views/static_pages/preventivedentalcleaning.html.erb
@@ -16,7 +16,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				To schedule a “Recare” please call the TLC Dental Group, Fayetteville / Manlius office at (315)-637-7684.
+				<span class="redlink">To schedule a “Recare” please call the TLC Dental Group, Fayetteville / Manlius office at (315)-637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>
 			</p>
 		</div>
 	</div>
