--- a/app/views/static_pages/rotadent.html.erb
+++ b/app/views/static_pages/rotadent.html.erb
@@ -63,7 +63,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For more information on the TLC Rotadent and for a demonstration of its distinctive features and personal instruction on its use, please call the TLC Dental Group Fayetteville / Manlius office at 315-637-7684. 
+				<span class="redlink">For more information on the TLC Rotadent and for a demonstration of its distinctive features and personal instruction on its use, please call the TLC Dental Group Fayetteville / Manlius office at 315-637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>
 			</p>
 		</div>
 	</div>
