--- a/app/views/static_pages/tobaccocessationprogram.html.erb
+++ b/app/views/static_pages/tobaccocessationprogram.html.erb
@@ -48,7 +48,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For definitions related to  tobacco cessation consult Dr. Rothenberg's Dental Dictionary. And for a personal Tobacco Cessation Program, please call the TLC Dental Group, Fayetteville / Manlius office at 315-637-7684. 
+				For definitions related to  tobacco cessation consult Dr. Rothenberg's Dental Dictionary. <span class="redlink">And for a personal Tobacco Cessation Program, please call the TLC Dental Group, Fayetteville / Manlius office at 315-637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span> 
 			</p>
 		</div>
 	</div>
