--- a/app/views/static_pages/toothextraction.html.erb
+++ b/app/views/static_pages/toothextraction.html.erb
@@ -24,7 +24,7 @@
 				Prior to your procedure, we will present you with options for anesthetics or sedation and throughout your procedure you will enjoy the comfort of our signature “Gentle Dentistry.”  <br>
 			</p>
 			<p>
-				For definitions related to tooth extraction consult Dr. Rothenberg's Dental Dictionary.  And for prompt consultation on tooth extraction, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
+				For definitions related to tooth extraction consult Dr. Rothenberg's Dental Dictionary.  <span class="redlink">And for prompt consultation on tooth extraction, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>
 			</p>
 		</div>
 	</div>
