--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@ our family of staff and patients.</div>
 				<i><h4 style="line-height:25px; margin-top: -6px;">
 				7197 Highbridge
 				<br>Fayetteville, NY
-				<br>Directions<br><%= link_to "Email Us", contact_path, :class => "red" %></span><br>
+				<br>Directions<br><%= link_to "Email Us", contact_path(@contact, :anchor => "email"), :class => "red" %></span><br>
 				<span style="color:red;">315-637-7684</span>
 				</h4></i>
 			</div>			
