--- a/app/views/static_pages/badbreath.html.erb
+++ b/app/views/static_pages/badbreath.html.erb
@@ -29,7 +29,7 @@
 				Throughout your examination and treatment you will enjoy the comfort of our signature “Gentle Dentistry.”<br>
 			</p>
 			<p>
-				For definitions related to halitosis consult Dr. Rothenberg's Dental Dictionary.  And for prompt diagnosis and treatment of your bad breath, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.    
+				For definitions related to halitosis consult Dr. Rothenberg's Dental Dictionary. <span class="redlink"> And for prompt diagnosis and treatment of your bad breath, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>    
 			</p>									
 		</div>
 	</div>
