--- a/app/views/static_pages/brokendentures.html.erb
+++ b/app/views/static_pages/brokendentures.html.erb
@@ -18,7 +18,7 @@
 				Throughout your examination and treatment you will enjoy the comfort of our signature "Gentle Dentistry.
 			</p>
 			<p>
-				For definitions related to dentures consult Dr. Rothenberg's Dental Dictionary.  And for prompt treatment of broken or ill fitting dentures, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
+				For definitions related to dentures consult Dr. Rothenberg's Dental Dictionary.  <span class="redlink">And for prompt treatment of broken or ill fitting dentures, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>
 			</p>								
 		</div>
 	</div>
