--- a/app/views/static_pages/burningmouth.html.erb
+++ b/app/views/static_pages/burningmouth.html.erb
@@ -21,7 +21,7 @@
 				Throughout your examination and treatment you will enjoy the comfort of our signature “Gentle Dentistry.”
 			</p>
 			<p>
-				For definitions related to Burning Mouth Syndrome consult Dr. Rothenberg's Dental Dictionary. And for prompt diagnosis and treatment of your BMS, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.    
+				For definitions related to Burning Mouth Syndrome consult Dr. Rothenberg's Dental Dictionary. <span class="redlink">And for prompt diagnosis and treatment of your BMS, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>
 			</p>								
 		</div>
 	</div>
