--- a/app/views/static_pages/chippedcrown.html.erb
+++ b/app/views/static_pages/chippedcrown.html.erb
@@ -18,7 +18,7 @@
 				Throughout your crown procedure you will enjoy the comfort of our signature “Gentle Dentistry.”<br>
 			</p>
 			<p>
-				For definitions related to dental crowns consult Dr. Rothenberg's Dental Dictionary.  And for prompt treatment of a dislodged, lost, or significantly chipped crown, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
+				For definitions related to dental crowns consult Dr. Rothenberg's Dental Dictionary.  <span class="redlink">And for prompt treatment of a dislodged, lost, or significantly chipped crown, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>
 			</p>								
 		</div>
 	</div>
