--- a/app/views/static_pages/cleaning.html.erb
+++ b/app/views/static_pages/cleaning.html.erb
@@ -62,7 +62,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For definitions related to professional dental cleaning consult Dr. Rothenberg's Dental Dictionary.  To schedule a "Recare" please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
+				For definitions related to professional dental cleaning consult Dr. Rothenberg's Dental Dictionary.  <span class="redlink"> To schedule a "Recare" please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>
 			</p>			
 		</div>
 	</div>
