--- a/app/views/static_pages/crowns.html.erb
+++ b/app/views/static_pages/crowns.html.erb
@@ -47,7 +47,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For definitions related to dental crowns consult Dr. Rothenberg's Dental Dictionary.  To learn if you might benefit from a dental crown, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
+				For definitions related to dental crowns consult Dr. Rothenberg's Dental Dictionary. <span class="redlink"> To learn how you might benefit from a dental crown, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>
 			</p>			
 		</div>
 	</div>
