--- a/app/views/static_pages/dentures.html.erb
+++ b/app/views/static_pages/dentures.html.erb
@@ -83,7 +83,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For information related to dentures consult Dr. Rothenberg's Dental Dictionary.  To learn how you might benefit from dentures, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
+				For information related to dentures consult Dr. Rothenberg's Dental Dictionary.  <span class="redlink"> To learn how you might benefit from dentures, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>
 			</p>			
 		</div>
 	</div>
