--- a/app/views/static_pages/flouridetreatment.html.erb
+++ b/app/views/static_pages/flouridetreatment.html.erb
@@ -69,7 +69,7 @@
 			</p>			
 			<p>
 				<b>More Information</b></br>
-				For definitions related to fluoride consult Dr. Rothenberg's Dental Dictionary.  And to schedule a TLC fluoride treatment consultation, please call the TLC Dental Group Fayetteville / Manlius office at 315-637-7684.
+				For definitions related to fluoride consult Dr. Rothenberg's Dental Dictionary.  <span class="redlink">And to schedule a TLC fluoride treatment consultation, please call the TLC Dental Group Fayetteville / Manlius office at 315-637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>
 			</p>
 		</div>
 	</div>
