--- a/app/views/static_pages/losttooth.html.erb
+++ b/app/views/static_pages/losttooth.html.erb
@@ -18,7 +18,7 @@
 				Throughout your treatments for loose or lost teeth you will enjoy the comfort of our signature “Gentle Dentistry.”
 			</p>
 			<p>
-				For  definitions related to an avulsed and extruded tooth consult Dr. Rothenberg's Dental Dictionary.  And for prompt treatment and alleviation of these conditions, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
+				For  definitions related to an avulsed and extruded tooth consult Dr. Rothenberg's Dental Dictionary.  <span class="redlink">And for prompt treatment and alleviation of these conditions, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>
 			</p>									
 		</div>
 	</div>
