--- a/app/views/static_pages/sealants.html.erb
+++ b/app/views/static_pages/sealants.html.erb
@@ -42,7 +42,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For definitions related to dental sealants consult Dr. Rothenberg's Dental Dictionary.  And for prompt sealant protection of your teeth, please call the TLC Dental Group Fayetteville / Manlius office at 315-637-7684.
+				For definitions related to dental sealants consult Dr. Rothenberg's Dental Dictionary.  <span class="redlink">And for prompt sealant protection of your teeth, please call the TLC Dental Group Fayetteville / Manlius office at 315-637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>
 			</p>
 		</div>
 	</div>
