--- a/app/views/static_pages/snaponsmile.html.erb
+++ b/app/views/static_pages/snaponsmile.html.erb
@@ -64,7 +64,7 @@
 			</p>			
 			<p>
 				<b>More Information</b><br>
-				  To learn if you might benefit from Snap-On Smile, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.<br>
+				  <span class="redlink">To learn how you might benefit from Snap-On Smile, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span><br>
 			</p>			
 		</div>
 	</div>
