--- a/app/views/static_pages/stickyteeth.html.erb
+++ b/app/views/static_pages/stickyteeth.html.erb
@@ -23,7 +23,7 @@
 				Throughout your procedure you will enjoy the comfort of our signature “Gentle Dentistry.”
 			</p>
 			<p>  
-				For definitions related to dental plaque and Professional Dental Cleaning consult Dr. Rothenberg's Dental Dictionary.  To schedule an appointment for this vitally important service please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
+				For definitions related to dental plaque and Professional Dental Cleaning consult Dr. Rothenberg's Dental Dictionary.  <span class="redlink">To schedule an appointment for this vitally important service please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684  or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>
 			</p>									
 		</div>
 	</div>
