--- a/app/views/static_pages/toothcavity.html.erb
+++ b/app/views/static_pages/toothcavity.html.erb
@@ -21,7 +21,7 @@
 				Throughout this treatment you will enjoy the comfort of our signature “Gentle Dentistry.”  <br>
 			</p>
 			<p>
-				For more information on fillings click <%= link_to "here", dreamsmiles_fillings_path %>.  For definitions related to dental cavities consult Dr. Rothenberg's Dental Dictionary."  And for prompt detection and treatment of your dental cavity, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
+				For more information on fillings click <%= link_to "here", dreamsmiles_fillings_path %>.  For definitions related to dental cavities consult Dr. Rothenberg's Dental Dictionary."  <span class="redlink">And for prompt detection and treatment of your dental cavity, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>
 			</p>
 		</div>
 	</div>
