--- a/app/views/static_pages/whitening.html.erb
+++ b/app/views/static_pages/whitening.html.erb
@@ -70,7 +70,7 @@
 			</p>						
 			<p>
 				<b>More Information</b><br>
-				For definitions related to dental whitening consult Dr. Rothenberg's Dental Dictionary.  To learn if you might benefit from dental whitening, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
+				For definitions related to dental whitening consult Dr. Rothenberg's Dental Dictionary.  <span class="redlink">To learn how you might benefit from dental whitening, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684 or click <%= link_to "here to email us", contact_path(@contact, :anchor => "email"), :class => "redlink" %>. </span>
 			</p>			
 		</div>
 	</div>
