added SEO stuff

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -5,6 +5,15 @@ body {
   background-color: #ececec;
 }
 
+.sitetite {
+  font-size: 37px !important;
+}
+
+.fauxh1 {
+  font-size: 24.5px !important;
+  text-align: center;
+}
+
 h1 {
   font-size: 37px;
 }
