--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,7 @@
 <div itemscope itemtype="http://schema.org/Organization" style="display:none;">
 <a itemprop="url" href="tlcdentalsyr.com"><div itemprop="name"><strong>Rothenberg DDS/ TLC Dental Group</strong></div>
 </a>
-<div itemprop="description">TLC is many facets of care. We at TLC warmly welcome you to
-our family of staff and patients.</div>
+<div itemprop="description">At TLC Dental Group we provide dental cleaning in Fayetteville, NY.  Learn more about our preventive and professional care available to our patients here!</div>
 <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
 <span itemprop="streetAddress">7197 Highbridge Road</span><br>
 <span itemprop="addressLocality">Fayetteville</span><br>
@@ -29,7 +28,7 @@ our family of staff and patients.</div>
 				<img itemprop="logo" src="/assets/TLC_logo.jpg" alt="TLC Dental Group Syracuse NY Logo">
 			</div>
 			<div class="span6" style="margin-top: -15px;">
-				<b><i><h1><span itemprop="name">Rothenberg DDS</span>/<br>TLC Dental Group</h1>
+				<b><i><h2 class="sitetitle"><span itemprop="name">Rothenberg DDS</span>/<br>TLC Dental Group</h2>
 				<h2>We Cater to Cowards</h2></b></i>
 			</div>
 			<div class="span2">
