--- a/app/views/static_pages/preventivedentalcleaning.html.erb
+++ b/app/views/static_pages/preventivedentalcleaning.html.erb
@@ -1,4 +1,4 @@
-<title>Professional Dental Cleaning | TLC Dental Group Syracuse</title>
+<title>Dental Cleaning in Fayetteville, NY | TLC Dental Group</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
@@ -9,7 +9,7 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container" style="padding-bottom: 15px;	">
-			<h3>Professional Dental Cleaning</h3>
+			<h1 class="fauxh1">Professional Dental Cleaning</h1>
 			<%= image_tag 'recaretooth.jpg', :class => "float-right" %>
 			<p>
 				A Professional Dental Cleaning or “Recare” figures prominently in Dream Smile Solutions, Common Dental Problems, and Preventive Dentistry.  It is in many ways the copestone of our collective dental treatments and is fundamental to achieving and maintaining your “Dream Smile”.  For details on Recare click <%= link_to "here", dreamsmiles_cleaning_path %>.<br>
