--- a/app/views/static_pages/snaponsmile.html.erb
+++ b/app/views/static_pages/snaponsmile.html.erb
@@ -1,4 +1,4 @@
-<title>Snap-On Smile | TLC Dental Group Syracuse</title>
+<title>Dental Cleaning in Fayetteville, NY | TLC Dental Group</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
@@ -9,7 +9,7 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<h3>TLC Snap-On Smile</h3> <h4>A perfect smile <br> & <br> A dream come true</h4><br> 
+			<h1 class="fauxh1">TLC Snap-On Smile</h1> <h4>A perfect smile <br> & <br> A dream come true</h4><br> 
 			<p>
 				<b>Those Special Moments</b><br>
 				Are there moments when you dream of a perfect smile but don’t have the time or funds for a complete dental makeover?<br>
