made changes as per williams email

--- a/app/views/static_pages/gentledentistry.html.erb
+++ b/app/views/static_pages/gentledentistry.html.erb
@@ -9,7 +9,7 @@
 
 <div class="row-fluid">
 	<div class="span8 offset2">
-		<div class="content-container">
+		<div class="content-container" id="gentledentistry">
 			<div class="row-fluid">
 				<div class="span6">			
 					<h3>The Art of Gentle Dentistry</h3>
