--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,7 +9,7 @@
 <div id="left-welcome">
 	<div class="row-fluid">
 		<div class="span2 offset1">
-			<a href="<%= newpatients_path %>/#cowardlion"><img src="<%= asset_path 'homepage-lion.jpg' %>" class="homepage-lion" /></a>
+			<a href="<%= gentledentistry_path %>/#gentledentistry"><img src="<%= asset_path 'homepage-lion.jpg' %>" class="homepage-lion" /></a>
 		</div>
 		<div class="span6">
 			<i><p>
@@ -19,10 +19,12 @@
 				<b>TLC is a Dream Smile</b>  from a palette of possibilities<br>
 				<b>TLC is Robust Health</b>  from a full range of services<br>
 				<b>TLC is Modern Technology </b>for optimum treatment<br>
+				<b>TLC is Affordable</b> family dental care<br>
+				<b>TLC is Award Winning</b> family dentistry<br>
 			</p></i>
 		</div>
 		<div class="span3">
-			<a href="<%= blog_path %>/#trophy"><img src="<%= asset_path 'trophy.jpg' %>" class="trophy" id="trophy" /></a>
+			<a href="<%= newpatients_path %>/#biteout"><img src="<%= asset_path 'piggybank.png' %>" class="trophy" id="trophy" /></a>
 		</div>
 	</div>
 </div>
@@ -33,7 +35,9 @@
 				We at TLC warmly welcome you to<br>
 				our family of staff and patients.</i>
 			</h5><br>
-			<%=	image_tag 'homepage-signature.jpg' %>
+			<h5>Stephen J. Rothenberg DDS</h5>
+			<%=	image_tag 'homepage-signature.jpg' %><br>
+			<a href="<%= blog_path %>/#trophy"><%=	image_tag 'homepage-award.jpg' %></a>
 		</div>
 	</div>
 </div>
