--- a/app/views/static_pages/newpatients.html.erb
+++ b/app/views/static_pages/newpatients.html.erb
@@ -32,8 +32,9 @@
 </div>
 <div class="row-fluid">
 	<div class="span10 offset1">
-		<div class="contact-container">
+		<div class="contact-container" id="biteout">
 			<h3>We Take the Bite Out of Dental Bills</h3>
+			<%= image_tag 'piggybank.png', :class => "center" %><br>
 			<p>
 				Dr. Rothenberg believes that: "excellent dental care should not be reserved for the privileged few."  Accordingly, TLC Dental has long been recognized not only for the excellence of its dental care but also for the affordability of its care.<br>
 			</p>
