added text on home page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,9 @@
 <div class="welcome-text">
 	<div class="row-fluid">
 		<div class="span12">
-			<i><h3 style="text-decoration:underline">Welcome to TLC Dental Group</h3><h5>TLC is many facets of care.</h5></i>
+			<i><h3 style="text-decoration:underline">Welcome to TLC Dental Group</h3>
+				<h5>Fayetteville family dentist</h5>
+				<h5>TLC is many facets of care.</h5></i>
 		</div>
 	</div>
 </div>
