--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -595,6 +595,17 @@ table.gadget {
     width: 200px;
     height: auto;
   }
+
+  .homepage-lion {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: 20px;
+  }
+
+  .center-img {
+    text-align: center;
+  }
+
 }
 
 @media (max-width: 700px) {
@@ -624,12 +635,52 @@ table.gadget {
 @media (max-width: 480px) {
   #left-welcome {
     p {
-      margin-left: 9%;
+      margin-left: 0;
+      text-align: center;
     }
+  }
+
+  .piggybank {
+    margin-left: 0;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 
   p {
     font-size: 12px;
     line-height: 20px;
+  }
+
+  .footer {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+}
+
+@media (max-width: 362px) {
+  .dreamsmiles-btn {
+    margin-left: -15px;
+  }
+
+  .socialmedia {
+    margin-right: -12px;
+  }
+}
+
+@media (max-width: 321px) {
+  .container {
+    -webkit-box-shadow: none;     
+    box-shadow: none;
+    padding: 0px;
+  }
+
+  body {
+    background-color: white;
+  }
+}
+
+@media (max-width: 320px) {
+  .content-container {
+    padding: 20px;
   }
 }
