--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,7 +10,7 @@
 </div>
 <div id="left-welcome">
 	<div class="row-fluid">
-		<div class="span2 offset1">
+		<div class="span2 offset1 center-img">
 			<a href="<%= gentledentistry_path %>/#gentledentistry"><img src="<%= asset_path 'homepage-lion.jpg' %>" class="homepage-lion" /></a>
 		</div>
 		<div class="span6">
@@ -25,8 +25,8 @@
 				<b>TLC is Award Winning</b> family dentistry<br>
 			</p></i>
 		</div>
-		<div class="span3">
-			<a href="<%= newpatients_path %>/#biteout"><img src="<%= asset_path 'piggybank.png' %>" class="trophy" id="trophy" /></a>
+		<div class="span3 center-img">
+			<a href="<%= newpatients_path %>/#biteout"><img src="<%= asset_path 'piggybank.png' %>" class="piggybank" id="trophy" /></a>
 		</div>
 	</div>
 </div>
