--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
 	</div>
 <div class="navbar">
   <div class="navbar-inner">
-    <div class="container">
+    <div class="container-fluid">
  
       <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -145,7 +145,7 @@
             <li><%= link_to "New Patients", newpatients_path %></li>
             <li><%= link_to "Contact Us", contact_path %></li>
       </div>
- 		</ul>
+ 
     </div>
   </div>
 </div>	
