--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,10 @@
  *= require_tree .
  */
 
+ .dropdown-backdrop{
+    position: static;
+}
+
 @media(max-width: 979px){
 	.mobilenav {
 		display: none !important;
