--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -183,6 +183,15 @@
   ga('create', 'UA-46213670-1', 'tlcdentalsyr.co');
   ga('send', 'pageview');
 
+  $('.dropdown-toggle').click(function(e) {
+  e.preventDefault();
+  setTimeout($.proxy(function() {
+    if ('ontouchstart' in document.documentElement) {
+      $(this).siblings('.dropdown-backdrop').off().remove();
+    }
+  }, this), 0);
+});
+
 </script>
 </body>
 </html>
