--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -115,24 +115,34 @@ label {
 .socialmedia {
   background-image:url('socialmedia-btn.png');
   background-repeat: no-repeat;
-  width: 133px;
-  height: 53px;
+  width: 210px;
+  height: 50px;
   position:relative;
   bottom: 10px;
   top: 0px;
   float: right;
   margin-right: 135px;
     h6 {
-      position: relative;
-      top: 2px;
-      font-size: 12px;
-      margin-bottom: -5px;
       color: #0f53a5;
+      display: inline-block;
+      font-size: 15px;
       line-height: 9px;
+      margin-bottom: -5px;
+      position: relative;
+      top: 12px;
     }
     img {
-      margin-top: 9px;
+      padding-left: 4px;
+      padding-right: 4px;
+      position: relative;
+      top: 6px;      
     }
+}
+
+.socialmedia-more {
+  display: none;
+  position: relative;
+  top: 15px;
 }
 
 .redlink {
